--- a/src/styles/components/_pokemon-list-item.scss
+++ b/src/styles/components/_pokemon-list-item.scss
@@ -1,14 +1,20 @@
 .pokemon-list-item {
   width: calc(50% - 10px);
-  margin-left: 5px;
-  margin-right: 5px;
-  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 20px 5px;
   padding: 5px;
-  text-align: center;
   border: 1px solid $light-grey;
 
   a {
     color: $dark-grey;
+    text-align: center;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
   }
 }
 
