--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,5 @@
-@import 'base/vars';
-@import 'base/mixins';
+@import 'base/colors';
 @import 'base/reset';
-@import '~breakpoint-sass/stylesheets/breakpoint';
-@import 'base/generics';
 @import 'components/header';
 @import 'components/filters';
 @import 'components/pokemon-list';
