--- a/src/styles/components/_pokemon-list.scss
+++ b/src/styles/components/_pokemon-list.scss
@@ -6,3 +6,23 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+.load-more-button {
+  background-color: $blue;
+  color: $white;
+  text-transform: uppercase;
+  padding: 10px;
+  border-radius: 2px;
+  margin-left: auto;
+  margin-right: auto;
+  transition: opacity 0.3s;
+  cursor: pointer;
+
+  &:hover {
+    opacity: 0.7;
+  }
+
+  &:disabled {
+    background-color: $grey;
+  }
+}
